[package]
name = "character_twister"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
description = "OCR using evolutionary algorithms."
readme = "README.md"
repository = "https://github.com/willi-kappler/character_twister"
exclude = ["*.png", "example", "target"]
keywords = ["OCR", "evolutionary", "genetic"]
categories = ["algorithms", "science"]

#[badges]
#travis-ci = {repository = "https://travis-ci.org/willi-kappler/character_twister"}




[dependencies]
darwin-rs = "0.4"
clap = "2.25"
font-loader = "0.3.2"

[profile.release]
lto = true
